2004 Mar 28 Stefan Urbanek

    Changes according to the Helge Hess:
    * STBundleInfo: fix to use string instead of constant (OSX compatibility)
    * STFileScript, STLanguage, STScript: added missing #imports


2003 Nov 24 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>

    * Version 0.8.1

2003 Nov 24 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>

    * Few fixes, removed some compiler warnings. Fixed Shell to use
    proper environment.

2003 Nov 8 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>

    * Updated tools to use STConversation object.

2003 Oct 23 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>

    * Added STEnvironment +sharedEnvironment, +defaultScriptingEnvironment and
    initWithDefaultDescription. Deprecated initDefault, 
    environmentWithDescriptionName, environmentWithDescriptionName
    * Added STConversation class
    
2003 Oct 6 Stefan Urbanek <urbanek@host.sk>

    * Added STFileScript - moved all unnecessary stuff from STScript there.
    * Fixed STScriptsManager to use STFileScript

2003 Oct 3   Stefan Urbanek <urbanek@host.sk>

    * Added ReadlineTranscript module (Idea by Alexander Diemand + patch from 
    David Ayers)
    * Added shell.st example.

2003 Sep 24  Stefan Urbanek <urbanek@host.sk>
    
    * STEnvironmentDescription: guard initialisation in Autorelease pool

2003 Sep 23  Stefan Urbanek <urbanek@host.sk>

    * STEngine: setValueForOption: added

2003 Aug 13  Stefan Urbanek <urbanek@host.sk>

    * Version 0.8.0

2003 Aug 9  Stefan Urbanek <urbanek@host.sk>

    * Removed compiler warnings in StepTalk.framework, Smalltalk and Tools

2003 Aug 6  Stefan Urbanek <urbanek@host.sk>

    * Frameworks: new directory
    * Changed StepTalk from library to framework
    * Modules: Removed StepTalk module as it is no more needed, because
    we have framework and it can provide scripting capabilities by it self
    * All GNUMakefiles modified to reflect change to Framework